FIXES z-index for sidebar toggle

--- a/frontend/src/renderer/components/workspace/tabset/_workspace-tabset.scss
+++ b/frontend/src/renderer/components/workspace/tabset/_workspace-tabset.scss
@@ -58,6 +58,8 @@
 
 
 .toggle-sidebar {
+  z-index: 2;
+
   .btn--toolbar {
     height: 1.9em;
     width: 1.9em;
